# wgpu-hartree-fock-2d

./: Cargo.toml  README.md
src/: buff_utils.rs  lib.rs  main.rs  shader.wgsl
